--- a/indexStyle.css
+++ b/indexStyle.css
@@ -1,5 +1,9 @@
 body {
-    background-color: black;
+
+    background-image: url("bg.jpg");
+    background-repeat: no-repeat;
+    background-position: left top;
+    background-attachment: fixed;
   }
   
   h1 {
@@ -9,7 +13,7 @@ body {
   }
   
   p {
-    color: whitesmoke;
+    color: black;
     font-family: Impact, Haettenschweiler, 'Arial Narrow Bold', sans-serif;
     font-size: 20px;
   }
